# Compiler-2025

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  parse_tree.txt
docs/: parse_tree.md  parser.md
include/: lexer.hpp  parse_rules.hpp  parse_tree.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parse_rules.cpp  parse_tree.cpp  parser.cpp
tests/: lexer_test.cpp
